linux server path fix